force-app/main/default/objects/CLQ_Domain_Rule_Finding__c/CLQ_Domain_Rule_Finding__c.object-meta.xml
<CustomObject>
    <description>Junction object between Domain rule and Standard Findings</description>
    <label>Domain Rule Finding</label>
    <nameField>
        <displayFormat>RF-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Domain Rule Findings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>