force-app/main/default/objects/CLQ_Domain_Rule_Finding__c/fields/CLQ_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Order_Number__c</fullName>
    <label>Order Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>