force-app/main/default/objects/CLQ_Domain_Rule_Finding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Order_Number__c</columns>
    <columns>CLQ_Domain_Rule__c</columns>
    <columns>CLQ_Standard_Finding__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>