force-app/main/default/objects/CLQ_Domain_Rule_Finding__c/listViews/All_Informatica.listView-meta.xml
<ListView>
    <fullName>All_Informatica</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Domain_Rule__c</columns>
    <columns>CLQ_Standard_Finding__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Informatica User</value>
    </filters>
    <label>All_Informatica</label>
</ListView>